# DiscreteTimeSystem

./: .dockerignore  .gitignore  CMakeLists.txt  DiscreteTimeSystem.sln  Dockerfile  Impact matrix on changes in configs.xlsx  MEMO.md  ProjectSummary.md  README.md  control_roadmap_progress.xlsx
.githooks/: README.md  pre-commit  pre-commit.cmd  pre-commit.ps1  setup-hooks.cmd  setup-hooks.ps1
DiscreteTimeSystem/: DiscreteTimeSystem.vcxproj  DiscreteTimeSystem.vcxproj.filters  ToDo.txt  doc.txt
DiscreteTimeSystem/include/: matrix.h
DiscreteTimeSystem/include/linalg/: matrix.h  matrix_core.h  matrix_exp.h  matrix_ops.h  state_space.h
DiscreteTimeSystem/include/utils/: bit_utils.h
DiscreteTimeSystem/source/: main.c
DiscreteTimeSystem/source/linalg/: matrix.c  matrix_core.c  matrix_exp.c  matrix_ops.c  state_space.c
DiscreteTimeSystem/source/utils/: bit_utils.c
DiscreteTimeSystem/x64/Debug/: DiscreteTimeSystem.exe.recipe  DiscreteTimeSystem.ilk  vc143.idb
DiscreteTimeSystem/x64/Debug/Discrete.b9621742.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DiscreteTimeSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DiscreteTimeSystemApp/: DiscreteTimeSystemApp.vcxproj  DiscreteTimeSystemApp.vcxproj.filters  ToDo.txt  doc.txt
DiscreteTimeSystemLib/: DiscreteTimeSystemLib.vcxproj  DiscreteTimeSystemLib.vcxproj.filters
DiscreteTimeSystemLib/app/include/app_motor/: app_motor.h
DiscreteTimeSystemLib/app/src/: main.c
DiscreteTimeSystemLib/app/src/app_motor/: app_motor.c
DiscreteTimeSystemLib/control/include/: state_space.h  state_space_c2d.h  state_space_discrete.h
DiscreteTimeSystemLib/control/src/: state_space.c  state_space_c2d.c  state_space_discrete.c
DiscreteTimeSystemLib/core/include/: core_error.h  core_matrix.h
DiscreteTimeSystemLib/core/src/: core_error.c  matrix_core.c
DiscreteTimeSystemLib/include/core/: core_bit_utils.h  core_error.h  core_math_utils.h
DiscreteTimeSystemLib/include/linalg/: matrix_core.h  matrix_exp.h  matrix_ops.h  state_space.h
DiscreteTimeSystemLib/include/utils/: bit_utils.h
DiscreteTimeSystemLib/numerics/include/: bit_utils.h  math_utils.h
DiscreteTimeSystemLib/numerics/include/integrators/: rk4.h
DiscreteTimeSystemLib/numerics/include/linalg/: matrix_exp.h  matrix_norm.h  matrix_ops.h  matrix_solve.h
DiscreteTimeSystemLib/numerics/include/pade/: pade.h  pade_exp_coeffs.h  pade_scaling.h
DiscreteTimeSystemLib/numerics/src/: bit_utils.c  math_utils.c
DiscreteTimeSystemLib/numerics/src/integrators/: rk4.c
DiscreteTimeSystemLib/numerics/src/linalg/: matrix_exp.c  matrix_norm.c  matrix_ops.c  matrix_solve.c
DiscreteTimeSystemLib/numerics/src/pade/: pade.c  pade_exp_coeffs.c  pade_scaling.c
DiscreteTimeSystemLib/source/: main.c
DiscreteTimeSystemLib/source/core/: core_bit_utils.c  core_error.c  core_math_utils.c
DiscreteTimeSystemLib/source/linalg/: matrix_core.c  matrix_exp.c  matrix_ops.c  state_space.c
DiscreteTimeSystemLib/source/utils/: bit_utils.c
DiscreteTimeSystemRunner/: DiscreteTimeSystemRunner.vcxproj  DiscreteTimeSystemRunner.vcxproj.filters
DiscreteTimeSystemRunner/app/include/: runner_io_json.h
DiscreteTimeSystemRunner/app/src/: input.json  main.cpp  runner_io_json.cpp
DiscreteTimeSystemRunner/core/include/: runner_error_map.h  runner_exit_codes.h
DiscreteTimeSystemRunner/core/src/: runner_error_map.cpp
DiscreteTimeSystemRunner/doc/: Prerequisite.txt
UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters
UnitTest/source/: main.c  main.cpp
UnitTest/tests/: main.cpp
UnitTest/tests/control/: state_space_discrete.cpp  test_state_space.cpp  test_state_space_c2d.cpp
UnitTest/tests/core/: core_bit_utils.cpp  core_error.cpp  core_math_utils.cpp  test_core_error.cpp  test_core_matrix.cpp
UnitTest/tests/linalg/: matrix_ops.c  test_matrix_core.cpp  test_matrix_ops.cpp  test_state_space.cpp
UnitTest/tests/numerics/: test_math_utils.cpp
UnitTest/tests/numerics/linalg/: test_matrix_exp.cpp  test_matrix_norm.cpp  test_matrix_ops.cpp  test_matrix_solve.cpp
UnitTest/tests/numerics/pade/: pade.cpp  test_pade_expm.cpp  test_pade_scaling.cpp
UnitTest/tests/utils/: bit_utils.cpp
docs/01_ProjectArchitecture/: ProjectArchitecture.md
docs/02_Math/01_PadéApproximation/: 10-theory.md  20-algorithm.md
docs/02_Math/02_DiscreteStateSpace/: 10-theory.md  20-algorithm.md
docs/02_Math/03_RungeKutta/: 10-theory.md
docs/MatrixExponential/: 10-theory.md  20-algorithm.md  20-theory-matrix-exponential.md  30-algorithm.md  Sequence.pu
docs/Project Architecture/: ProjectArchitecture.md
docs/VanLoanMethod/: van_loan_method.md
include/: matrix_ops.h
include/linalg/: matrix.h
testdata/: input.json  result.json
